header html structure

--- a/style.css
+++ b/style.css
@@ -3,23 +3,14 @@
 body {
   margin: 0;
   padding: 0;
-  height: 100vh;
-  background-color: var(background-color);
+
+  background-color: var(--primary-color);
 }
 * {
   box-sizing: border-box;
   margin: 0;
 }
 header {
-  height: 100px;
-  background-color: var(--header-color);
-  color: var(--text-color);
-}
-main {
-  height: 500px;
-  background-color: var(--main-color);
-}
-footer {
-  height: 200px;
-  background-color: var(--footer-color);
+  height: 141px;
+  background-color: var(--primary-color);
 }
