--- a/variables.css
+++ b/variables.css
@@ -1,8 +1,6 @@
 :root {
-  background-color: rgb(245, 245, 245);
-  --header-color: blue;
-  --main-color: red;
-  --footer-color: green;
-  --text-color: white;
-  --font-size: 30px;
+  --primary-color: rgb(245, 245, 245);
+  --basic-color: rgb(30, 30, 30);
+  --secondary-color: rgb(162, 96, 40);
+  --primary-font: 15px;
 }
