--- a/style.css
+++ b/style.css
@@ -9,8 +9,43 @@ body {
 * {
   box-sizing: border-box;
   margin: 0;
+  font-family: var(--poppins);
 }
 header {
   height: 141px;
   background-color: var(--primary-color);
+  display: flex;
+  justify-content: space-between;
+  padding: 0 80px 0 80px;
+  align-items: center;
+
+  div.company {
+    display: flex;
+    .logo {
+      width: 36px;
+      height: 31px;
+      fill: var(--secondary-color);
+    }
+    p {
+      font-size: 22px;
+      font-weight: 600;
+    }
+  }
+  nav {
+    ul {
+      display: flex;
+      gap: 20px;
+      list-style: none;
+
+      a {
+        text-decoration: none;
+        color: var(--basic-color);
+        font-weight: 300;
+      }
+      a:hover {
+        color: var(--secondary-color);
+        transition-duration: 500ms;
+      }
+    }
+  }
 }
