--- a/variables.css
+++ b/variables.css
@@ -5,4 +5,6 @@
   --secondary-color: rgb(162, 96, 40);
   --primary-font: 15px;
   --poppins: "Poppins", sans-serif;
+  --logo-color: #000;
+  --overlay-color: rgba(30, 30, 30, 0.35);
 }
