--- a/style.css
+++ b/style.css
@@ -147,5 +147,40 @@ main {
       }
     }
   }
-  /* section third  */
+}
+/* section third  */
+section.third {
+  width: 100%;
+  height: 524px;
+  flex-direction: column;
+  gap: 120px;
+
+  h2 {
+    text-align: center;
+  }
+
+  div.parent {
+    display: flex;
+    margin-top: 120px;
+    justify-content: space-around;
+
+    div.child {
+      width: 232px;
+      text-align: center;
+    }
+
+    h3 {
+      color: var(--secondary-color);
+      font-size: 22px;
+      font-weight: 600;
+      margin-bottom: 50px;
+      height: 62px;
+    }
+
+    P {
+      color: var(--basic-color);
+      font-size: 15px;
+      font-weight: 200;
+    }
+  }
 }
